--- a/src/main/resources/templates/updateStaffInformation.html
+++ b/src/main/resources/templates/updateStaffInformation.html
@@ -18,16 +18,16 @@
     <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script>
     <![endif]-->
 </head>
-<body>
+<body class="container-fluid">
 
 <nav class="navbar navbar-light" style="background-color: #003C70; height: 72px">
     <img src="../static/images/AU_logo.png"
-         width="70" height="70" alt="" th:src="@{images/AU_logo.png}"
+         width="70" height="70" alt="" th:src="@{/images/AU_logo.png}"
          style="float: left"/>
     <p class="text-center" style="font-size: xx-large; font-style: normal; color: white; margin-top: 10px">Bilgisayar Mühendisliği
         Araştırma Verilerinin Değerlendirilmesi Sistemi</p>
     <img src="../static/images/muhendislik_fak_logo.png"
-         width="70" height="70" alt="" th:src="@{images/muhendislik_fak_logo.png}"
+         width="70" height="70" alt="" th:src="@{/images/muhendislik_fak_logo.png}"
          style="float: right; margin-top: -65px"/>
 </nav>
 <nav class="navbar navbar-light" style="margin-top:-19px; height: 72px; border-color: gainsboro">
